[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.1"
nom = { version = "7.1.3", features = ["alloc"] }
num = "0.4.1"
regex = "1.10.2"
test-log = "0.2.13"

[features]
default = ["day_08"]
problem_1 = []
problem_2 = []
day_01 = ["problem_1", "problem_2"]
day_02 = ["problem_1", "problem_2"]
day_03 = ["problem_1", "problem_2"]
day_04 = ["problem_1", "problem_2"]
day_05 = ["problem_1", "problem_2"]
day_06 = ["problem_1", "problem_2"]
day_07 = ["problem_1", "problem_2"]
day_08 = ["problem_1", "problem_2"]
