[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
env_logger = "0.10.1"
nom = { version = "7.1.3", features = ["alloc"] }
num = "0.4.1"
regex = "1.10.2"
test-log = "0.2.13"
